[tool.poetry]
name = "cipher_bm3019"
version = "0.1.0"
description = "A practice package with the cipher function, which encrypts strings of text."
authors = ["Brendan Mapes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
